[gd_scene load_steps=8 format=3 uid="uid://qu8rdchnra3s"]

[ext_resource type="Script" path="res://scripts/rocket_bullet.gd" id="1_bwfcx"]
[ext_resource type="Texture2D" uid="uid://ckqa1cnt7cl2i" path="res://addons/objects/player_bullet.png" id="2_g2tl0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6xkn"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_odow8"]
radius = 50.0

[sub_resource type="Animation" id="Animation_v77ox"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(6, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_a1rru"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wa6wo"]
_data = {
"RESET": SubResource("Animation_a1rru"),
"explosion": SubResource("Animation_v77ox")
}

[node name="RocketBullet" type="StaticBody2D"]
script = ExtResource("1_bwfcx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s6xkn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g2tl0")

[node name="ExplosionArea" type="Area2D" parent="."]
process_mode = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_odow8")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wa6wo")
}

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
